<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="Outputs" Id="{04c7e31d-42dd-42ce-9d57-ed88c639b70d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	fSimulationTime : LREAL;
	fCylinderVelocity : REAL;
	fCylinderPosition : REAL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>