<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="CraneSimulation" Id="{9db64730-0769-4523-9dc9-b42b5865fac6}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM CraneSimulation
VAR
	fInitialVelocity : REAL := 0;
	fInitialPosition : REAL := 0;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF Inputs.bStartSimulation AND Inputs.bAutoMode THEN
	Outputs.fSimulationTime := Outputs.fSimulationTime + Parameters.fCyclicTime;
ELSE
	Outputs.fSimulationTime := 0;
END_IF

IF Outputs.fSimulationTime > 0 AND Inputs.bAutoMode THEN
	Parameters.bSimulationRunning := TRUE;
ELSE
	Parameters.bSimulationRunning := FALSE;
END_IF

IF Inputs.bAutoMode THEN
	Outputs.fCylinderVelocity := Inputs.fCylinderVelocityReference;
	Outputs.fCylinderPosition := Outputs.fCylinderVelocity * (Outputs.fSimulationTime*Outputs.fSimulationTime)/2 + fInitialVelocity*Outputs.fSimulationTime + fInitialPosition;
ELSE
	Outputs.fCylinderPosition := Inputs.fManualCylinderPositionReference;
END_IF

]]></ST>
    </Implementation>
    <LineIds Name="CraneSimulation">
      <LineId Id="5" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="8" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="19" Count="2" />
      <LineId Id="24" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="31" Count="1" />
      <LineId Id="26" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="30" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>